[tool.poetry]
name = "skypro9-1"
version = "0.1.0"
description = ""
authors = ["mcborax4-lgtm <mcborax4@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro9"}]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
known_first_party = ["skypro9"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test.*",
    ".*tests.*",
    ".*test.*"
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    ".*migrations.*"
]
ignore_errors = true